_sub/compute/k8s-atlantis-flux-config/values/middleware.yaml
apiVersion: "traefik.io/v1alpha1"
kind: Middleware
metadata:
    name: ${ingressroute_basic_auth_middleware_name}
    namespace: ${namespace}
spec:
    basicAuth:
        secret: ${ingressroute_basic_auth_secret_name}
